unpackaged/main/default/objects/zkfedex__QueuedShipmentSpecialServices__c/zkfedex__QueuedShipmentSpecialServices__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Shipment Special Services</label>
    <nameField>
        <displayFormat>Queued-Shipment-SS-{00000000}</displayFormat>
        <label>Queued Shipment Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Shipment Special Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>