unpackaged/main/default/objects/zkfedex__QueuedShipmentSpecialServices__c/fields/zkfedex__DateCertainHomeDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DateCertainHomeDeliveryDate__c</fullName>
    <label>Date Certain Home Delivery Date</label>
    <type>Date</type>
</CustomField>