unpackaged/main/default/objects/zkfedex__QueuedShipmentSpecialServices__c/fields/zkfedex__HomeDeliveryPremium__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HomeDeliveryPremium__c</fullName>
    <label>Home Delivery Premium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx Appointment Home Delivery</fullName>
            </value>
            <value>
                <fullName>FedEx Date Certain Home Delivery</fullName>
            </value>
            <value>
                <fullName>FedEx Evening Home Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>