unpackaged/main/default/objects/zkfedex__QueuedShipmentSpecialServices__c/fields/zkfedex__IntlReturnCustomsReturnDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IntlReturnCustomsReturnDescription__c</fullName>
    <label>Intl Return Customs Return Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>