unpackaged/main/default/objects/zkfedex__QueuedShipmentSpecialServices__c/fields/zkfedex__SelectedSignatureOption__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SelectedSignatureOption__c</fullName>
    <label>Selected Signature Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult Signature Required</fullName>
            </value>
            <value>
                <fullName>Direct Signature Required</fullName>
            </value>
            <value>
                <fullName>Indirect Signature Required</fullName>
            </value>
            <value>
                <fullName>No Signature Required</fullName>
            </value>
            <value>
                <fullName>Service Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>